--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -35,7 +35,7 @@
 
   {{ 'theme.scss.css' | asset_url | stylesheet_tag }}
   {% include 'google-fonts' %}
-
+  {{ 'custom.css' | asset_url | stylesheet_tag }}
   <script>
     var theme = {
       strings: {
