--- a/assets/custom.css
+++ b/assets/custom.css
@@ -5,3 +5,5 @@
 .s4com-helpcenter h1, .s4com-panel, .s4com-sub-heading.s4com-border-bottom{ display: none;}
 .s4com-articles { padding-left: 0 !important; }
 .s4com-space-bottom.s4com-border-bottom { border: none;}
+#shopify-section-1527123718739 { margin-top: 0; padding-top: 0;}
+#shopify-section-1527123718739 h2 { color: #000; padding-bottom: 20px;}
