--- a/assets/custom.css
+++ b/assets/custom.css
@@ -33,6 +33,15 @@ body, input, textarea, button, select { font-size: 14px; }
 .artist-infor-right strong { color: #490A60 !important; font-size: 26px; text-transform: uppercase; display: block; padding-top: 20px; padding-bottom: 29px;}
 .artist-infor-right ul { margin-left: 0; margin-top: 28px;}
 .artist-infor-right li { margin-right: 20px;}
-
-
-
+.artist-infor-right li { float: left;}
+.artist-infor-right li a{ border-bottom: none !important;}
+.tattoo-artist-readmore{}
+/* Tattoo Artist */
+.tattoo-artist-page h2 { font-size: 49px; text-align: center;}
+.tattoo-artist-page span { font-size: 23px; text-align: center; display: block;margin-bottom: 20px;}
+.tattoo-artist-readmore { display: block; border: none !important; background: #410156; color: #fff; padding: 10px 10px !important; text-align: center; font-size: 20px;}
+.tattoo-dsrtist-information h2::after { background: #C4942F; height: 4px; width: 53px; content: ""; position: absolute; bottom: -13px; left: 165px;}
+.tattoo-dsrtist-information h2 {  text-align: center; color: #410156; position: relative; margin-bottom: 41px;}
+.tattoo-dsrtist-information { width: 406px; margin-left: 10%; float:left; margin-top: 50px;}
+.tattoo-artist-page h2 { color: #410156;}
+.tattoo-dsrtist-information.heading_small h2::after { left: 174px !important;}
