--- a/assets/custom.css
+++ b/assets/custom.css
@@ -3,11 +3,7 @@ body, input, textarea, button, select { font-size: 14px; }
 .page-width { padding-left:0; padding-right: 0; }
 .clear{ clear: both;}
 body, input, textarea, button, select{ color: #490A60;}
-.grid{ margin-left: 0 !important;}
-#MainContent {
-    width: 1700px;
-    margin: 0 auto;
-}
+header .site-header__cart { display: none;}
 /*HEADER*/
 header.site-header{ padding: 0 !important;}
 header .grid--table{ width: 99%;}
@@ -102,6 +98,7 @@ header .h2.site-header__logo { padding-left: 20px;}
 /* footer */
 .site-footer li a { color: #000;}
 .site-footer__newsletter label { color: #490A60 !important; font-size: 18px; text-transform: uppercase;}
+.site-footer__copyright--right .site-footer__copyright-content{ padding-left: 0!important;}
 #Subscribe { background: #490A60;}
 .site-footer__copyright.site-footer__copyright--right.medium-up--text-right{ text-align: left !important;}
 /* media query */
@@ -131,12 +128,15 @@ nav { width: 100% !important;}
 .template-page .grid__item.medium-up--five-sixths.medium-up--push-one-twelfth{ left:0;}
 .tattoo-artist-page span{ font-size: 17px;}
 }
-@media screen and (max-width: 1215px){
-.punktured-video-content{ padding: 50px 0 50px 20px;}
-.punktured-image-list li img { width: 250px;}
+@media screen and (max-width: 1200px){
+.punktured-image-list li { width: 239px;}
 }
 @media screen and (max-width: 1199px){
 .page-width{ width: 97%; padding: 0 10px;}
+}
+@media screen and (max-width: 1080px){
+.punktured-video img { width: 200px;}
+.punktured-video-content {width: 56%; padding: 50px 0 50px 20px;}
 }
 @media screen and (max-width: 990px){
 footer .grid__item { width: 300px; padding-left: 15px !important;}
@@ -160,13 +160,11 @@ header .site-header__icons-wrapper{ margin-right: 0 !important;}
 .adboutusleft { float: none; width: 96%; padding: 35px 10px 10px 10px; text-align: center;}
 }
 @media screen and (max-width: 749px){
-.punktured-video img { width: 230px;}
-.punktured-image-list li img { width: 230px;}
-.punktured-image-list li{ width: 230px; padding-top: 10px; margin: 0 auto !important; float: none;}
 .grid{ margin-left: 0;}
 .tattoo-dsrtist-information h2::after{ background: none;}
 }
 @media screen and (max-width: 600px){
+.punktured-image-list li{ margin: 0 auto !important; float: none;}
 .slideshow.slideshow--large { height: 269px;}
 footer .grid__item { width: 300px; padding-left: 15px !important; float: none; margin: 0 auto;}
 #shopify-section-1527123950217 { background-size: 400px;}
@@ -179,4 +177,7 @@ footer .grid__item { width: 300px; padding-left: 15px !important; float: none; m
 .tattoo-dsrtist-information{ width: 280px; margin-bottom: 16px;}
 footer .grid__item {width: 280px;}
 .page-width{ width: 95%;}
+.punktured-video img { width: 200px; float: none; margin: 0 auto; text-align: center; display: block; padding-top: 10px;}
+.punktured-video-content{ width: auto; float: none;}
+#contact_form .grid__item { padding-left: 0 !important;}
 }
