added code for target="_blank" to menu item

--- a/snippets/site-nav.liquid
+++ b/snippets/site-nav.liquid
@@ -63,8 +63,11 @@
       </li>
     {% else %}
       <li{% if link.active %} class="site-nav--active"{% endif %}>
-        <a href="{{ link.url }}" class="site-nav__link site-nav__link--main"{% if link.active %} aria-current="page"{% endif %}>{{ link.title }}</a>
+        <a href="{{ link.url }}" class="site-nav__link site-nav__link--main"{% if link.active %} aria-current="page"{% endif %} || {% if link.url contains 'http' %} target="_blank"{% endif %}>{{ link.title }}</a>
       </li>
-    {% endif %}
+    {% endif %}  
   {% endfor %}
+  
 </ul>
+
+   
