--- a/assets/custom.css
+++ b/assets/custom.css
@@ -11,7 +11,7 @@ header.site-header{ padding: 0 !important;}
 header .grid--table{ width: 99%;}
 header .h2.site-header__logo { padding-left: 20px;}
 #shopify-section-1527037810901 { margin-top: 0 !important; position: relative; top: 92px;}
-#PageContainer { position: relative;top: 86px;}
+#PageContainer { position: relative;top: 130px;}
 .template-index #PageContainer #MainContent { margin-top: 0;}
 .template-index #PageContainer { top: 0; position: inherit;}
 #PageContainer #MainContent{ position: inherit; top:0;}
@@ -89,7 +89,7 @@ header .h2.site-header__logo { padding-left: 20px;}
 .tranding-hours { margin-top: 12px; display: block; color: #000 !important; padding-bottom: 3px;}
 #store-list .store ul li:nth-child(2) { display: none;}
 /* Navigation */
-header.site-header { padding: 0 !important; position: fixed; height: 156px !important; display: block; z-index: 9999; top: 31px !important}
+header.site-header { padding: 0 !important; position: fixed; height: 156px !important; display: block; z-index: 9999; top: 0px !important}
 .site-header.header-alt { height: 121px !important; border-bottom: 1px solid #ccc !important;}
 .site-header.header-alt img { width: 178px;}
 .site-nav button, .site-nav a { font-size: 16px;}
@@ -134,6 +134,7 @@ header.site-header { padding: 0 !important; position: fixed; height: 156px !impo
 .slideshow__slide .slideshow__image { background-size: 83% auto;}
 .slideshow.slideshow--large { height: 750px;}
 #shopify-section-1527123950217{ padding-bottom: 0;}
+header.site-header{ top:0 !important;}
 }
 @media screen and (max-width: 1475px){
 .site-nav button, .site-nav a { font-size: 14px;}
